# StockAnalysis

./: .coveragerc  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  FACTOR_STRATEGY.md  LICENSE  README.md  SYSTEM.md  alembic.ini  api-openapi.json  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
alembic/: env.py
config/: portfolio.example.yaml  portfolio.yaml  real_holdings.yaml  russell_1000_tickers.txt  sectors.yaml  settings.yaml  strategies.yaml
data/: universe_ai_broad_2026-06-06.txt  universe_broad_pit_2022-01-03.txt  universe_broad_pit_2024-01-02.txt  universe_broad_pit_2026-06-02.txt
docs/: railway_deploy.md
reports/: Latest.json  SESSION_HANDOFF_2026_05_16.md  _deletion_hypotheses.json  _lazy_prices_hypothesis.json  _regime_A_recent.json  ab_baseline_covid.json  ab_hyst03_be2f46.json  ab_hyst05_234de3.json  ab_hyst05_be2f46.json  ab_hyst075_234de3.json  ab_hyst075_be2f46.json  ab_hyst10_234de3.json  ab_hyst10_be2f46.json  ab_hyst10_covid.json  ab_hyst15_234de3.json  ab_hyst15_be2f46.json  ab_raw_234de3.json  ab_raw_be2f46.json  ab_residual_234de3.json  ab_residual_be2f46.json  ablation_composite_nopead_234de3.json  ablation_mom_234de3.json  ablation_no_momentum_234de3.json  ablation_no_quality_234de3.json  ablation_no_value_234de3.json  ablation_qual_234de3.json  ablation_val_234de3.json  adhoc_2026_05_16.md  ai_sanity_check_2026-05-19.json  ai_sanity_check_2026-05-19.md  analyzer_correlation_2022_2024.json  analyzer_correlation_2022_2024.md  analyzer_ic_2022_2024.json  analyzer_ic_2022_2024.md  analyzer_ic_2022_2024_extended.json  analyzer_ic_2022_2024_extended.md  analyzer_ic_regime_vix_2022_2024.json  (+133 more)
(+748 files in other folders)
